syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.search";
option java_outer_classname = "SearchEngineImpl";

package searchEngine;

// Interface exported by the server.
service SearchEngine {
   
   // client sends 1 integer to see a list of available books.
   // The user can list the books by author, by title or by book ID
   // server returns a list of books ordered by the selected parameter
  rpc availability(ListBy) returns (stream AvailableBooks) {}
  
  // client sends 1 integer (user id)
  // server sends back the user's information 
  rpc readerInfo(userID) returns (userInformation) {}

  }
  
  message ListBy {  	
  	enum ListOperation{
  		TITLE = 0;
  		AUTHOR = 1;
  		ID = 2;
  	}
  	ListOperation operation = 1;
  	
  }
  
  message AvailableBooks {
  	int32 bookId = 1;
  	string title = 2;
  	string author = 3;
  	string language = 4;
  	string subject = 5;
  }
  
  
  message userID {
  	int32 userNumber = 1;
  }
  
  message userInformation {
  	string name = 1;
  	string registrationDate = 2;
  	bool borrowedBooks = 3;
  	int32 totalBooksBorrowed = 4;
  	bool status = 5;
  }